--- a/configs/ade20k/e2e_ms_rcnn_R_50_FPN_1x.yaml
+++ b/configs/ade20k/e2e_ms_rcnn_R_50_FPN_1x.yaml
@@ -1,8 +1,8 @@
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
-  WEIGHT: "catalog://ImageNetPretrained/MSRA/R-101"
+  WEIGHT: "catalog://ImageNetPretrained/MSRA/R-50"
   BACKBONE:
-    CONV_BODY: "R-101-FPN"
+    CONV_BODY: "R-50-FPN"
     OUT_CHANNELS: 256
   RPN:
     USE_FPN: True
@@ -19,6 +19,7 @@ MODEL:
     POOLER_SAMPLING_RATIO: 2
     FEATURE_EXTRACTOR: "FPN2MLPFeatureExtractor"
     PREDICTOR: "FPNPredictor"
+    NUM_CLASSES: 101
   ROI_MASK_HEAD:
     POOLER_SCALES: (0.25, 0.125, 0.0625, 0.03125)
     FEATURE_EXTRACTOR: "MaskRCNNFPNFeatureExtractor"
@@ -30,12 +31,16 @@ MODEL:
   MASK_ON: True
   MASKIOU_ON: True
 DATASETS:
-  TRAIN: ("coco_2017_train",)
-  TEST: ("coco_2017_val",)
+  TRAIN: ("ade20k_train",)
+  TEST: ("ade20k_val",)
 DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
   BASE_LR: 0.02
   WEIGHT_DECAY: 0.0001
-  STEPS: (60000, 80000)
-  MAX_ITER: 90000
+  STEPS: (20000, 26000)
+  MAX_ITER: 30000
+  IMS_PER_BATCH: 8
+TEST:
+  IMS_PER_BATCH: 4
+OUTPUT_DIR: "output/ade20k_R-50"
