--- a/configs/e2e_ms_rcnn_R_50_FPN_1x.yaml
+++ b/configs/e2e_ms_rcnn_R_50_FPN_1x.yaml
@@ -31,12 +31,15 @@ MODEL:
   MASK_ON: True
   MASKIOU_ON: True
 DATASETS:
-  TRAIN: ("coco_2014_train", "coco_2014_valminusminival")  
-  TEST: ("coco_2014_minival",)
+  TRAIN: ("coco_2017_train",)  
+  TEST: ("coco_2017_val",)
 DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
-  BASE_LR: 0.02
+  BASE_LR: 0.01 #0.02
   WEIGHT_DECAY: 0.0001
-  STEPS: (60000, 80000)
-  MAX_ITER: 90000
+  STEPS: (120000, 160000) #(60000, 80000)
+  MAX_ITER: 180000 #90000
+  IMS_PER_BATCH: 8
+TEST:
+  IMS_PER_BATCH: 4
